# mythtv

./: .clang-tidy  .clazy  .gitignore  CMakeLists.txt  CMakePresets.json  README.CMake.md
cmake/: CheckExternalLibraries.cmake  FindPerlModules.cmake  MythFindQt.cmake  MythOptions.cmake  PrintProperties.cmake  SetCmakePolicies.cmake  SetCompilerOptions.cmake  SetSearchPaths.cmake  StaticAnalysis.cmake  VersionInformation.cmake  mingw-w64-x86_64.cmake
cmake/embeddedlibs/: BuildMythDvdNav.cmake  FindOrBuildFFmpeg.cmake  FindOrBuildUdfRead.cmake
cmake/externallibs/: BuildQt5.cmake  BuildQt6.cmake  FindOrBuildAss.cmake  FindOrBuildExiv2.cmake  FindOrBuildICU.cmake
cmake/platform/: AndroidCrossBuildPkgConfigFiles.cmake  AndroidCrossCustomization.cmake  AndroidCrossDefaultPrefix.cmake  AndroidCrossSearchPaths.cmake  AndroidCrossValidateBuildSystem.cmake  DarwinCustomization.cmake  NetBSDCustomization.cmake  NetBSDSearchPaths.cmake  OpenBSDCustomization.cmake  OpenBSDSearchPaths.cmake  WindowsCrossCustomization.cmake  WindowsCrossDefaultPrefix.cmake  WindowsCrossSearchPaths.cmake
cmake/scripts/: concatenate-compdb.sh  cppcheck-join-files.cmake
mythplugins/: CMakeLists.txt  configure  settings.pro
mythtv/: CMakeLists.txt  configure  mythtv  settings.pro
mythtv/cmake/: FindHDHomerun.cmake  MythCheckIncludes.cmake  MythFindPackages.cmake  PrintConfig.cmake
mythtv/docs/: doxygen-architecture-document.cpp  (+1 more)
mythtv/programs/mythavtest/: CMakeLists.txt  mythavtest.cpp  mythavtest.pro
patches/: qt-5.15.11.patch  qt-5.15.9.patch
themestringstool/: CMakeLists.txt
(+1574 files in other folders)
